		the remote newsserver.
		You may need to edit or remove /opt/mbse/tmp/newsout to remove
		postings for the remote newsserver with echomail messages.
		Fixed a bug that no news was fetched at all.
		Fixed a bug that tossed echomail was attempted to post to the
		ISP newsserver (that didn't accept it).
		More debug logging info added for double filename announces.

	mbfile:
		The toberep command now logs the toberep.data in the debug
		logfile.
		Mbfile check will abort if a header of a files database is 
		corrupt.
		Mbfile check will now accept an area number to just check one
		single area.
		Added new experimental files database code which will only be
		used if configured with --enable-experiment.

	mbnntp:
		New program, news server to read echomail with a news client.
		Reading news works, no posts yet.

	mbsebbs:
		Added loging of virus scanner results.
		Patches for offline reader programs that create messages with
		wrong line terminaters (Sempoint).

	mbsetup:
		Added auto setup for message area creation date. Also creates
		a faked newsgroup name in echomail areas. Both settings are
		needed for the newsserver.
		It wasn't possible anymore to change the number of systems in
		menu 1.11.11
		Fixed a header include.
		Fixed an error where new created file areas were created
		without a file header.

	mbtask:
		Removed debug logging for the disk thread.
		Added mbnntp to the taskregs to count as a user program.
		In check for T-Mail fileboxes added condition that the zone
		must exist in the setup.

	script:
		In the maint script removed the check option from the mbfile
		command so it will not run every day.


v0.51.3		22-Mar-2003 - 11-Apr-2004

	general:
		Removed one setup entry for check for free diskspace, there
		were two different values for the same purpose. The removed
		one was not used.
		Moved doc directory from /opt/mbse/doc to /opt/mbse/share/doc.
		Added configure test for CPU optimization flags. Use with
		./configure --enable-optimize.