@@ -32,6 +32,7 @@
 #include "../lib/mbselib.h"
 #include "../lib/mbse.h"
 #include "../lib/users.h"
+#include "../lib/mbsedb.h"
 #include "filesub.h"
 #include "funcs.h"
 #include "language.h"
@@ -153,6 +154,7 @@ void GetstrD(char *sStr, int iMaxlen)
 /*
  * Open FileDataBase, the filepointer is at the begin of the first record.
  */
+#ifndef	USE_EXPERIMENT
 FILE *OpenFileBase(unsigned long Area, int Write)
 {
     FILE    *pFile;
@@ -177,7 +179,7 @@ FILE *OpenFileBase(unsigned long Area, int Write)
     free(FileBase);
     return pFile;
 }
-
+#endif
 
 
 /*
@@ -877,10 +879,15 @@ int ImportFile(char *fn, int Area, int fileid, time_t iTime, off_t Size)
  */
 int Addfile(char *File, int AreaNum, int fileid)
 {
-    FILE    *id, *pFileDB, *pPrivate;
+    FILE    *id, *pPrivate;
     int	    err = 1, iDesc = 1, iPrivate = FALSE, GotId = FALSE, lines, i, j;
     char    *Filename, *temp1, *idname = NULL, *Desc[26], *lname, temp[81]; 
     struct  stat statfile; 
+#ifdef	USE_EXPERIMENT
+    struct _fdbarea *fdb_area = NULL;
+#else
+    FILE	    *pFileDB;
+#endif
 
     Filename = calloc(PATH_MAX, sizeof(char));
     temp1    = calloc(PATH_MAX, sizeof(char));  
@@ -888,7 +895,11 @@ int Addfile(char *File, int AreaNum, int fileid)
 	
     sprintf(Filename, "%s/%s", area.Path, File);
 
+#ifdef	USE_EXPERIMENT
+    if ((fdb_area = mbsedb_OpenFDB(AreaNum, 30))) {
+#else
     if ((pFileDB = OpenFileBase(AreaNum, TRUE)) != NULL) {
+#endif
 	/*
 	 * Do a physical check of file to see if it exists
 	 * if it fails it will return a zero which will not
@@ -900,7 +911,11 @@ int Addfile(char *File, int AreaNum, int fileid)
 	    /* Upload was unsuccessful for: */
 	    printf("\n%s%s\n\n", (char *) Language(284), File);
 
+#ifdef	USE_EXPERIMENT
+	    mbsedb_CloseFDB(fdb_area);
+#else
 	    fclose(pFileDB);
+#endif
 	    free(Filename);
 	    free(temp1);
 	    free(lname);
@@ -1065,9 +1080,14 @@ int Addfile(char *File, int AreaNum, int fileid)
 		free(Desc[i]);
 	}
 
+#ifdef	USE_EXPERIMENT
+	mbsedb_InsertFDB(fdb_area, fdb, area.AddAlpha);
+	mbsedb_CloseFDB(fdb_area);
+#else
 	fseek(pFileDB, 0, SEEK_END);
 	fwrite(&fdb, fdbhdr.recsize, 1, pFileDB);
 	fclose(pFileDB);
+#endif
 
 	sprintf(temp, "%s/log/uploads.log", getenv("MBSE_ROOT"));
 	if ((pPrivate = fopen(temp, "a+")) == NULL)
